--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@
 
 body{
     font-family: Copperplate, sans-serif;
-    width: 100%;
+    width: 1300px;
+    margin: auto;
     height: 600px;
     background: #7F7FD5;
     background: -webkit-linear-gradient(to right, #91EAE4, #86A8E7, #000000);  /* Chrome 10-25, Safari 5.1-6 */
@@ -104,8 +105,13 @@ body{
     list-style: none;
 }
 
+.contact ul li a{
+    text-decoration: none;
+    color: white;
+}
+
 .ImgBase{
-    padding-left: 75px;
+    width: 1300px;
     padding-top: 290px;
     
 }
