--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,12 @@ body{
     
 }
 
+.ImgSec{
+    width: 1300px;
+    padding-top: 100px;
+    
+}
+
 .mapa{
     padding-left: 10px;
     margin-left: 15px;
