--- a/css/style1.css
+++ b/css/style1.css
@@ -4,9 +4,20 @@
     box-sizing: border-box;
 }
 
+@font-face{
+    font-family: Algerian;
+    src: url(../font/Algerian\ Regular.ttf);
+}
+
+@font-face{
+    font-family: Copperplate;
+    src: url(../font/Copperplate\ Gothic\ Light\ Regular.ttf);
+}
+
 body{
-    font-family: 'Barlow', sans-serif;
-    width: 100%;
+    font-family: Copperplate;
+    width: 1300px;
+    margin: auto;
     height: 600px;
     background: #7F7FD5;
     background: -webkit-linear-gradient(to right, #91EAE4, #86A8E7, #000000);  /* Chrome 10-25, Safari 5.1-6 */
@@ -50,8 +61,8 @@ body{
 }
 
 img{
-    width: 450px;
-    height: 450px;
+    width: 300px;
+    height: 300px;
 }
 
 .card{
